fixed a bug where hovering over the buttons shifted everything down

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,8 @@ body{
 
   .button-tab:hover{
     border-bottom: 1px solid white;
-    margin-bottom: 0;
+    padding-bottom: 0;
+
   }
 
 
